# bibliotecaebe

./: .gitignore  CHANGELOG.md  EBE-APO-001_Apostila_Piloto_O_Contexto_Imediato.docx  EBE-COMP-ID_Compendio_da_Identidade_Completa.docx  EBE-DOC-001_Identidade_Institucional.docx  EBE-DOC-002_Declaracao_de_Fe.docx  EBE-DOC-003_Projecto_Pedagogico_Oficial.docx  EBE-DOC-004_Regimento_Academico.docx  EBE-DOC-005_Arquitectura_Oficial.docx  EBE-DOC-006_Mapa_de_Cursos.docx  EBE-DOC-007_Duracao_Oficial.docx  EBE-DOC-008_Sistema_de_Pre_Requisitos.docx  EBE-FRM-001_Ficha_de_Matricula.docx  EBE-FRM-002_Plano_de_Aula.docx  EBE-FRM-003_Declaracao_de_Frequencia.docx  EBE-FRM-004_Ficha_de_Avaliacao.docx  EBE-FRM-005_Lista_de_Presenca.docx  EBE-FRM-006_Pauta_de_Avaliacao_dos_Alunos.docx  EBE-HIS-001_Historico_Escolar.docx  EBE-MAN-ALU_Manual_do_Aluno.docx  EBE-MAN-DOC_Manual_do_Docente.docx  EBE-MOD-TCC-001_Modelo_de_TCC_Monografia_Final.docx  EBE-MODELOS_CERTIFICADOS.docx  EBE-MODELO_APOSTILA_em_branco.docx  EBE_COMPENDIO_INSTITUCIONAL_OFICIAL.docx  LEIA-ME.md  PROJECT_STATE.md  README.md  ROADMAP.md  SECURITY.md  _estilos.py  apostila_piloto.py  compendio.py  compendio_identidade_completa.py  compendio_merge.py  config.example.yaml  doc1_missao_visao_valores.py  doc2_declaracao_fe.py  doc3_ppo.py  doc4_regimento.py  (+19 more)
.github/workflows/: autodiagnostic.yml  update_dashboard.yml  validate.yml
docs/: ARQUITECTURA.md  GEMINI_SETUP.md  MANUAL_CRIACAO_MAPAS.md  PLANO_ARQUITETURA.md
state/: curriculum.json
tools/: parse_mapa.py  test_docx_engine.py
workflows_ready/: daily_generate.yml
(+34 files in other folders)
