[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebe"
version = "0.1.0"
description = "Sistema de geração de apostilas e materiais da Escola Bíblica Epignósis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-docx>=1.1.2",
  "google-generativeai>=0.8.3",
  "google-ai-generativelanguage>=0.6.10",
  "jinja2>=3.1.4",
  "pyyaml>=6.0.2",
  "tenacity>=8.5.0",
  "numpy>=1.26.4",
  "pydantic>=2.9.2",
  "python-slugify>=8.0.4",
  "click>=8.1.7",
  "tqdm>=4.66.5",
  "pdfplumber>=0.11.4",
  "pypdf>=4.3.1",
]

[project.scripts]
ebe = "ebe.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
